Fix bug with multiple stripe customer creation and fix code by remarks from review